deploy/kubernetes/mlcloud-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    k8s-app: mlcloud
  name: mlcloud
