deploy/kubernetes/mlcloud-svc.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: mlcloud
  name: mlcloud
  namespace: mlcloud
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30003
  selector:
    k8s-app: mlcloud
