deploy/kubernetes/mlcloud-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mlcloud
  namespace: mlcloud
spec:
  rules:
  - host: mlcloud-dev.kubernetes.wanda.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: mlcloud
          servicePort: 80
